unpackaged/main/default/objects/ACH_Debit__c/ACH_Debit__c.object-meta.xml
<CustomObject>
    <label>ACH Debit</label>
    <nameField>
        <displayFormat>ACH_Debit-{00000}</displayFormat>
        <label>ACH Debit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACH Debits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>