unpackaged/main/default/objects/ACH_Debit__c/fields/Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Name__c</fullName>
    <formula>Opportunity__r.Account.Legal_Name__c</formula>
    <label>Account Legal Name</label>
    <type>Text</type>
</CustomField>