unpackaged/main/default/objects/ACH_Debit__c/fields/Company_DBA__c.field-meta.xml
<CustomField>
    <fullName>Company_DBA__c</fullName>
    <formula>Opportunity__r.Company_DBA__c</formula>
    <label>Company DBA</label>
    <type>Text</type>
</CustomField>