unpackaged/main/default/objects/ACH_Debit__c/fields/Lease_Plus__c.field-meta.xml
<CustomField>
    <fullName>Lease_Plus__c</fullName>
    <formula>Opportunity__r.Account.LP_Cust_Number__c</formula>
    <label>Lease Plus #</label>
    <type>Text</type>
</CustomField>