unpackaged/main/default/objects/ACH_Debit__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <label>Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>